kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique
  labels:
    app.kubernetes.io/managed-by: argocd
