kubernetes/base/adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      serviceAccountName: adservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/adservice:v0.10.1
          ports:
            - containerPort: 9555
          readinessProbe:
            grpc:
              port: 9555
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            grpc:
              port: 9555
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
              memory: 180Mi
            limits:
              cpu: 300m
              memory: 300Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
    - port: 9555
      targetPort: 9555
