kubernetes/base/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      serviceAccountName: cartservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/cartservice:v0.10.1
          ports:
            - containerPort: 7070
          readinessProbe:
            grpc:
              port: 7070
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 7070
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 200m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
    - port: 7070
      targetPort: 7070
