kubernetes/base/checkoutservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      serviceAccountName: checkoutservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.10.1
          ports:
            - containerPort: 5050
          readinessProbe:
            grpc:
              port: 5050
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 5050
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
    - port: 5050
      targetPort: 5050
