kubernetes/base/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      serviceAccountName: currencyservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/currencyservice:v0.10.1
          ports:
            - containerPort: 7000
          readinessProbe:
            grpc:
              port: 7000
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 7000
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
    - port: 7000
      targetPort: 7000
