kubernetes/base/emailservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      serviceAccountName: emailservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/emailservice:v0.10.1
          ports:
            - containerPort: 8080
          readinessProbe:
            grpc:
              port: 8080
            periodSeconds: 5
          livenessProbe:
            grpc:
              port: 8080
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
    - port: 5000
      targetPort: 8080
