kubernetes/base/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      serviceAccountName: paymentservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/paymentservice:v0.10.1
          ports:
            - containerPort: 50051
          readinessProbe:
            grpc:
              port: 50051
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 50051
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
    - port: 50051
      targetPort: 50051
