kubernetes/base/productcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      serviceAccountName: productcatalogservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.10.1
          ports:
            - containerPort: 3550
          readinessProbe:
            grpc:
              port: 3550
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 3550
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
    - port: 3550
      targetPort: 3550
