kubernetes/base/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      serviceAccountName: recommendationservice-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.10.1
          ports:
            - containerPort: 8080
          readinessProbe:
            grpc:
              port: 8080
            periodSeconds: 5
          livenessProbe:
            grpc:
              port: 8080
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 220Mi
            limits:
              cpu: 200m
              memory: 450Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
    - port: 8080
      targetPort: 8080
