kubernetes/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
  namespace: boutique
spec:
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      serviceAccountName: redis-cart-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 2000
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          livenessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
          resources:
            requests:
              cpu: 70m
              memory: 200Mi
            limits:
              cpu: 125m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: boutique
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
    - port: 6379
      targetPort: 6379
